[gd_scene load_steps=2 format=3 uid="uid://bcb0hdraiq5ew"]

[ext_resource type="Script" path="res://script/title_screen.gd" id="1_o8cg5"]

[node name="Title_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = 99.0
offset_right = 240.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8cg5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "KAIZO TOWER BETA 0.1"

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Jouer"

[node name="Play Harmode" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HardMode(WIP)"

[node name="Option" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options(WIP)
"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play Harmode" to="." method="_on_play_harmode_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
